# cmd-zen

./: .gitignore  README.md
backend/: .ebextensions  .ebignore  alembic.ini  db.py  main.py  models.py  pyproject.toml  requirements.txt  seed_questions.py
backend/.platform/hooks/postdeploy/: run_alembic.py  run_alembic.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_questions.py  0002_create_guesses.py
backend/routers/: health.py  quiz.py
backend/static/: asset-manifest.json  index.html  main.4e60057c.js
backend/static/css/: main.ba6ec2d1.css
backend/static/js/: main.49199fd3.js  main.cebb7e0d.js  main.cebb7e0d.js.map
backend/static/static/css/: main.ba6ec2d1.css.map
backend/static/static/js/: main.49199fd3.js.map
backend/tests/: conftest.py  test_calculate_metrics.py  test_quiz.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  Statistics.js  VimFlashcard.js  commands.json  index.css
